--- a/web/package.json
+++ b/web/package.json
@@ -32,6 +32,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-markdown": "^10.1.0",
+    "recharts": "^3.5.1",
     "remark-gfm": "^4.0.1",
     "supertest": "^7.1.4",
     "tailwind-merge": "3.3.1",
