backend integration with gemini 2.5 flash and connect to recommender frontend

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,11 +1,8 @@
 fastapi
 uvicorn
 pydantic
-supabase
 python-dotenv
-torch
-pandas
-sentence-transformers
-scikit-learn
-transformers
 google-genai
+supabase
+pytest
+hypothesis
