--- a/web/package.json
+++ b/web/package.json
@@ -28,7 +28,7 @@
     "clsx": "2.1.1",
     "headlessui": "^0.0.0",
     "lucide-react": "0.462.0",
-    "next": "15.5.4",
+    "next": "^15.5.7",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-markdown": "^10.1.0",
